<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/ic_playlist"
        android:contentDescription="@string/imageview" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNamePlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/play_list"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCountSongOfPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/song"
            android:textColor="@color/colorNepal"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>
