<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarListSongInPlaylist"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorCerulean"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <Button
            android:id="@+id/btnToolBarListSongInPlaylistClose"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_down" />

        <TextView
            android:id="@+id/tvToolBarMusic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/toolbar_text_choice"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAddSongToPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_add"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:text="@string/create_new_song"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvChangeSongInPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_btn_change"
            android:paddingEnd="5dp"
            android:paddingStart="10dp"
            android:text="@string/change_playlist"
            android:textSize="20sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerviewListSongInPlaylist"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>
